# nvs_libraries

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
nvs_libraries/: CMakeLists.txt
nvs_libraries/include/: lookup_tables.h  nvs_LFO.h  nvs_delayFilters.h  nvs_denormal.h  nvs_fast_math_impl.h  nvs_filters.h  nvs_gen.h  nvs_logpow.h  nvs_matrix2x2.h  nvs_memoryless.h
nvs_libraries/include/interpolation/: hermite.h  hermite_double.h
nvs_libraries/src/: Makefile  lookup_tables.cpp  nvs_LFO.cpp  nvs_filters.cpp  nvs_gen_test
nvs_libraries/tests/: nvs_LUT_test.cpp  nvs_gen_test.cpp
